--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,20 @@
       {
         "image-alt": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-mask-image"
+        ]
+      }
     ]
   }
 }
